# movfuscator

./: .gitignore  CONTRIBUTE.md  CONTRIBUTING.md  README.md  proof_of_concept.s  pyproject.toml  requirements.txt
.github/workflows/: e2e.yaml  pyright.yaml  ruff.yaml  tests.yaml
src/blockpreprocessor/: __init__.py  context.py  expansion.py  models.py  preprocessor.py  symbols.py  utils.py
src/dataparser/: __init__.py  models.py  parser.py
src/instructionreplacer/: __init__.py  movfuscate.py
src/linearizer/: __init__.py  linearizer.py  models.py
src/memorymanager/: __init__.py  allocation.py  manager.py  models.py
src/movfuscator/: __init__.py  __main__.py  linearizer.py  movfuscate.py
src/parser/: __init__.py  models.py  parser.py
src/symbolsresolver/: __init__.py  resolver.py
src/textparser/: __init__.py  expression.py  models.py  parser.py  visualizer.py
tests/: test_dataparsing.py  test_e2e_snaphshots.py  test_expressions.py  test_memorymanager.py  test_parser.py  test_textparsing.py
tests/__snapshots__/: test_e2e_snaphshots.ambr  test_memorymanager.ambr  test_parser.ambr  test_textparsing.ambr
tests/e2e/: run.sh
tests/e2e/samples/: call.s  counter.s  math.s
