[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movfuscator"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest",
  "syrupy",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
